@@ -1,2 +1,2 @@
-myPlane = class=Box name=Unnamed levels=class=NumericalPoint name=levels dimension=2 values=[4,4]
+myPlane = class=Box name=Unnamed levels=class=NumericalPoint name=levels dimension=2 values=[4,4] bounds=class=Interval name=Unnamed dimension=2 lower bound=class=NumericalPoint name=Unnamed dimension=2 values=[0,0] upper bound=class=NumericalPoint name=Unnamed dimension=2 values=[1,1] finite lower bound=[1,1] finite upper bound=[1,1]
 sample = class=NumericalSample name=Unnamed implementation=class=NumericalSampleImplementation name=Unnamed size=36 dimension=2 data=[[0,0],[0.2,0],[0.4,0],[0.6,0],[0.8,0],[1,0],[0,0.2],[0.2,0.2],[0.4,0.2],[0.6,0.2],[0.8,0.2],[1,0.2],[0,0.4],[0.2,0.4],[0.4,0.4],[0.6,0.4],[0.8,0.4],[1,0.4],[0,0.6],[0.2,0.6],[0.4,0.6],[0.6,0.6],[0.8,0.6],[1,0.6],[0,0.8],[0.2,0.8],[0.4,0.8],[0.6,0.8],[0.8,0.8],[1,0.8],[0,1],[0.2,1],[0.4,1],[0.6,1],[0.8,1],[1,1]]
