@@ -1,2 +1,4 @@
-myPlane =  class=Box name=Unnamed levels=class=NumericalPoint name=levels dimension=2 values=[4,4]
+myPlane =  class=Box name=Unnamed levels=class=NumericalPoint name=Unnamed dimension=2 values=[4,4] bounds=class=Interval name=Unnamed dimension=2 lower bound=class=NumericalPoint name=Unnamed dimension=2 values=[0,0] upper bound=class=NumericalPoint name=Unnamed dimension=2 values=[1,1] finite lower bound=[1,1] finite upper bound=[1,1]
 sample =  class=NumericalSample name=Unnamed implementation=class=NumericalSampleImplementation name=Unnamed size=36 dimension=2 data=[[0,0],[0.2,0],[0.4,0],[0.6,0],[0.8,0],[1,0],[0,0.2],[0.2,0.2],[0.4,0.2],[0.6,0.2],[0.8,0.2],[1,0.2],[0,0.4],[0.2,0.4],[0.4,0.4],[0.6,0.4],[0.8,0.4],[1,0.4],[0,0.6],[0.2,0.6],[0.4,0.6],[0.6,0.6],[0.8,0.6],[1,0.6],[0,0.8],[0.2,0.8],[0.4,0.8],[0.6,0.8],[0.8,0.8],[1,0.8],[0,1],[0.2,1],[0.4,1],[0.6,1],[0.8,1],[1,1]]
+myPlane =  class=Box name=Unnamed levels=class=NumericalPoint name=Unnamed dimension=2 values=[4,4] bounds=class=Interval name=Unnamed dimension=2 lower bound=class=NumericalPoint name=Unnamed dimension=2 values=[7,8] upper bound=class=NumericalPoint name=Unnamed dimension=2 values=[9,16] finite lower bound=[1,1] finite upper bound=[1,1]
+sample =  class=NumericalSample name=Unnamed implementation=class=NumericalSampleImplementation name=Unnamed size=36 dimension=2 data=[[7,8],[7.4,8],[7.8,8],[8.2,8],[8.6,8],[9,8],[7,9.6],[7.4,9.6],[7.8,9.6],[8.2,9.6],[8.6,9.6],[9,9.6],[7,11.2],[7.4,11.2],[7.8,11.2],[8.2,11.2],[8.6,11.2],[9,11.2],[7,12.8],[7.4,12.8],[7.8,12.8],[8.2,12.8],[8.6,12.8],[9,12.8],[7,14.4],[7.4,14.4],[7.8,14.4],[8.2,14.4],[8.6,14.4],[9,14.4],[7,16],[7.4,16],[7.8,16],[8.2,16],[8.6,16],[9,16]]
