@@ -21,6 +21,7 @@
   * Removed deprecated method DistributionFactory::build(NumericalSample, CovarianceMatrix&)
   * Removed deprecated distributions alternative parameters constructors, accessors
   * Added a generic implementation of the computeLogPDFGradient() method in the DistributionImplementation class.
+  * Allow Box to support bounds
 
 === Python module ===
 
